fix: 당첨 번호 입력 메소드 수정