@@ -3,6 +3,7 @@ package lotto.view;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Input {
 
@@ -21,7 +22,7 @@ public class Input {
             String[] input = Console.readLine().split(",");
             return Arrays.stream(input)
                     .map(Integer::parseInt)
-                    .toList();
+                    .collect(Collectors.toList());
         } catch(NumberFormatException e) {
             throw new IllegalArgumentException();
         }
